fixing the ui bug without the lablbing improvemrnt and range loop check